objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>Field which automatically gets updated when a Quote is submitted to approval/ it&apos;s approved/ it&apos;s rejected.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block_Replace_Original_Contract_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Block/Replace Original Contract ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Blocked__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To check the Contract Blocked</description>
        <label>Contract Blocked</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>CPQ Quotes (Contract Blocked)</relationshipLabel>
        <relationshipName>CPQ_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dummmy_Text_Conditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dummmy Text &amp; Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>IF(
    ISPICKVAL(PMC_CPQ_Region__c, &apos;North America&apos;),
    IF(
    OR(
    RecordType.DeveloperName = &apos;PMC_CPQ_International&apos;,
    RecordType.DeveloperName = &apos;PMC_CPQ_InternationalDistribution&apos;
    ),
    &quot;PMC_CPQ_NAInternational&quot;
    ,
    &quot;PMC_CPQ_QLEDomesticNACoPr&quot;
    ),
    &quot;PMC_CPQ_QLEB2BDOMINTBRFERT&quot;
)</formula>
        <label>QLE Column Conditionality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Plant_City__c</fullName>
        <description>Plant city</description>
        <formula>quoteLine__r.PMC_CPQ_ProductLocation__r.PMC_CPQ_PlantCity__c</formula>
        <label>FOB Plant City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Plant_Name__c</fullName>
        <formula>quoteLine__r.PMC_CPQ_ProductLocation__r.Name</formula>
        <label>FOB Plant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderFieldSetName__c</fullName>
        <formula>IF(
    ISPICKVAL(PMC_CPQ_Region__c, &apos;North America&apos;),
    &apos;PMC_CPQ_LineEditorNA&apos;,
    IF(NOT(ISPICKVAL( SBQQ__Type__c ,&apos;Amendment&apos;)),&apos;PMC_CPQ_LineEditorBR&apos;,&apos;PMC_CPQ_LineEditorBRAmendment&apos;)
    
  )</formula>
        <label>QLE Header Conditionality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_FPD_order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FPD order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOT_Shipping_TypePOC__c</fullName>
        <label>MOT_Shipping_TypePOC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barge FCA</fullName>
                </value>
                <value>
                    <fullName>Truck CFR</fullName>
                </value>
                <value>
                    <fullName>Barge FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moved_to_Draft_Stage_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Moved to Draft Stage Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Quote_replacement_margin__c</fullName>
        <formula>SBQQ__MasterContract__r.SBQQ__Quote__r.PMC_CPQ_ReplacementMargin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Quote replacement margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_AdditionalComments__c</fullName>
        <description>GDASF-6700</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Agreed_Guarantee__c</fullName>
        <description>Garantia Acordada</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreed Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_CIF_ITINERARY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ROTEIRO CIF</description>
        <label>CIF Itinerary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ContractCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ContractURL__c</fullName>
        <description>This Field will store the URL of the Contract Document generated in DocuSign CLM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_CounterpartyLogo__c</fullName>
        <description>This field stores the logo of the counterparty entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Counterparty Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_CustomerSignatureStatus__c</fullName>
        <label>Customer Signature Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CLM_DeadlineForFormalizingGuarantee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deadline for formalizing Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_DeliveryType__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auto Acceptance</fullName>
                </value>
                <value>
                    <fullName>Sign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CLM_Delivery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_DocumentNumber__c</fullName>
        <description>This field will store the contract document number</description>
        <formula>IF(TEXT(SBQQ__Type__c) &lt;&gt; &apos;Amendment&apos;,
SUBSTITUTE(Name,&quot;Q-&quot;,&quot;&quot;),
SUBSTITUTE(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.SBQQ__Quote__r.Name ,&quot;Q-&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Evergreen_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evergreen Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ExpirationTimeMinutesHour__c</fullName>
        <description>This field will be solely used for the purpose of showing the expiration Time upto the definition of Hours and Minutes in the Quote Document</description>
        <formula>TRIM(LEFT(TEXT(PMC_CPQ_ExpirationTime__c) ,5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExpirationTimeMinutesHour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_FOB_ACCREDITATION__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CREDENCIAMENTO FOB</description>
        <label>FOB Accreditation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Guarantee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_OtherRejectionReason__c</fullName>
        <description>This field will store the explanation for Rejection, when customer Rejects Quote and Reason is Other.
This will be populated through CLM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Cancelled Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Other_Freight_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Freight Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_QuoteDocumentId__c</fullName>
        <description>This field on the Quote Header will be used to store the document id as it is in DocuSign CLM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_QuoteDocumentName__c</fullName>
        <description>This field on the Quote Header will be used to store the Name of the Quote Document</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_RecipientorSignatureEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient or Signature Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_RecipientorSignatureName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient or Signature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Region__c</fullName>
        <formula>IF(VALUE(LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)
) &gt;= 1000 &amp;&amp; VALUE(LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)
) &lt;= 1999, &apos;US&apos;,

IF(VALUE(LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)
) &gt;= 2000 &amp;&amp; VALUE(LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)
) &lt;= 2999 , &apos;Canada&apos;,

IF(VALUE(LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)
) &gt;= 4000 &amp;&amp; VALUE(LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)
) &lt;= 4999, &apos;Brazil&apos;,&apos;&apos; 

)

)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ResendContractDocument__c</fullName>
        <description>This field will be used for backend purposes to enable the Toast Message services on the Quote record page based on DocuSign CLM workflow feedback</description>
        <label>Resend Contract Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CLM_Services__c</fullName>
        <description>This Field captures the Services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Signer2Email__c</fullName>
        <description>This field will be used to store the email of Signer 2 for the signature of international contracts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Signer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Signer2Name__c</fullName>
        <description>This field will be used to store the name of Signer 2 for the signature of international contracts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Signer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Statistic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Statistic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_TotalPotashDiscount__c</fullName>
        <description>This field will be used to determine total potash discount value, if value greater than 0, this field will be used to indicate whether the Potash discount column needs to be shown in the quote and contract document</description>
        <label>TotalPotashDiscount</label>
        <summarizedField>SBQQ__QuoteLine__c.PMC_CPQ_VolumeDiscount__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_TypeOfGuarantee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type Of Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AccountCountry__c</fullName>
        <description>Field to store Account Country</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AccountCreditStatus__c</fullName>
        <description>This field is created as a part of story to handle/store value of Account Credit Status for any Quote.</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the Account manager for each quote</description>
        <inlineHelpText>Indicates the Account manager for the Quote</inlineHelpText>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Addendum__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Addendum</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AdvanceBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate advance billing for Brazil quotes</description>
        <label>Advance Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AmendmentApprovalBackend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Approval Backend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AmendmentIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ApprovalCondition__c</fullName>
        <label>Approval Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approvals received via Email</fullName>
                </value>
                <value>
                    <fullName>Approvals received via Phone/Call</fullName>
                </value>
                <value>
                    <fullName>Approvals received via Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ApprovalSubmissionDate__c</fullName>
        <description>Approval submission date/time is a backend field to capture the exact date/time of submission time to use it on last priced date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ApprovedStatusDuration__c</fullName>
        <formula>IF( ISPICKVAL(SBQQ__Status__c , &quot;Approved&quot;) &amp;&amp; NOT( ISBLANK(  PMC_CPQ_QuoteInApprovedStatusTime__c ) ) , TEXT(ROUND(  PMC_CPQ_PriorApprovedStatusDuration__c  +((NOW() - PMC_CPQ_QuoteInApprovedStatusTime__c)*24),1))&amp;&apos; Hours&apos; , TEXT( PMC_CPQ_PriorApprovedStatusDuration__c ) &amp;&apos; Hours&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Status Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AutoApprovedToggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>toggle checkbox to validate a quote is auto approved through screenflow</description>
        <label>Auto Approved Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AutoRejectUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Reject Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_B2BB2CIndicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>B2B/B2C Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRCommodityDiscountLevel1__c</fullName>
        <label>BR Commodity DiscountLevel1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRCommodityDiscountLevel2__c</fullName>
        <label>BR Commodity Discount Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRCommodityDiscountLevel3__c</fullName>
        <label>BR Commodity Discount Level 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRPerformanceDiscountLevel1__c</fullName>
        <label>BR Performance Discount Level1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRPerformanceDiscountLevel2__c</fullName>
        <label>BR Performance Discount Level2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRPerformanceDiscountLevel3__c</fullName>
        <label>BR Performance Discount Level3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRQuoteLineConcatenatedPaymentT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BR Quote Line Concatenated Payment Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BelowFloorHighFloor__c</fullName>
        <label>Below Floor High  Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BelowFloorHighNUP__c</fullName>
        <label>Below Floor High  NUP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BelowFloorHighVolume__c</fullName>
        <label>Below Floor High  Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BelowFloorLowFloor__c</fullName>
        <label>Below Floor Low Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BelowFloorLowNUP__c</fullName>
        <label>Below Floor Low NUP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BelowFloorLowVolume__c</fullName>
        <label>Below Floor Low Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTCHighNUP__c</fullName>
        <label>Between T &amp; C High NUP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTCHighVolume__c</fullName>
        <label>Between T &amp; C High Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTFHighFloor__c</fullName>
        <label>Between T &amp; F High Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTFHighNUP__c</fullName>
        <label>Between T &amp; F High NUP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTFHighTarget__c</fullName>
        <label>Between T &amp; F High Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTFHighVolume__c</fullName>
        <label>Between T &amp; F High Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTFLowNUP__c</fullName>
        <label>Between T &amp; F Low NUP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BetweenTFLowVolume__c</fullName>
        <label>Between T &amp; F Low Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of GDASF-2983. This field will take only Accounts that are of type Bill To.</description>
        <inlineHelpText>Account to which this shall be billed to</inlineHelpText>
        <label>Bill To Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Bill-to</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Bill To Account)</relationshipLabel>
        <relationshipName>BillToQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BypassExpiration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BypassValidation_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CLMContractStatus__c</fullName>
        <description>This field is created as a part of story to handle/store value of CLM Contract Status for any Quote.</description>
        <formula>&quot;True&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CeilingPriceMaximumDifference__c</fullName>
        <label>Ceiling Price (Maximum Difference)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ClonedQuoteFlowBypassLogic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created this flag to bypass Quote Flows logic when a Quote is cloned with related</description>
        <label>Cloned Quote Flow Bypass Logic(Backend)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CommercialTradingQuote__c</fullName>
        <label>Commercial/Trading Quote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Trading Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CommissionAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to Comission Agent.</description>
        <label>Commission Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPQ Quotes (Commission Agent)</relationshipLabel>
        <relationshipName>PMC_CPQ_CommissionAgent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Commission__c</fullName>
        <description>This field is created to check commission&apos;s value  , This is as per the US GCPM 1064</description>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CompetitorProduct__c</fullName>
        <description>To hold the information of the competitor&apos;s product</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Competitor__c</fullName>
        <description>Field to hold the competitor&apos;s information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a consignment field</description>
        <label>Consignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContactEmail__c</fullName>
        <description>This field is created as a part of story to handle/store value of Contact Email for any Quote.</description>
        <formula>PMC_CPQ_PrimaryContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContactPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractEnd__c</fullName>
        <description>If Master contract exists - then formula to pull the date from Contract reference</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Quote End Date</inlineHelpText>
        <label>Contract Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractLanguage__c</fullName>
        <description>If region is North America, then English, else if region is Brazil, then ask Account Manager to select Spanish or Portuguese</description>
        <label>Output Document Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractPeriod__c</fullName>
        <description>This field calculate number of months between contract start and end date.</description>
        <formula>((YEAR(PMC_CPQ_ContractEnd__c) - YEAR(PMC_CPQ_ContractStart__c))*12) + (MONTH(PMC_CPQ_ContractEnd__c) - MONTH(PMC_CPQ_ContractStart__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractShippingInstructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Instructions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractStageName__c</fullName>
        <description>This field helps to denote the current stage of the contract document</description>
        <label>Contract Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Signature</fullName>
                </value>
                <value>
                    <fullName>Partially Executed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                    <isActive>false</isActive>
                    <label>Accept</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Pending Signatures</fullName>
                    <isActive>false</isActive>
                    <label>Pending Signatures</label>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <isActive>false</isActive>
                    <label>Signed</label>
                </value>
                <value>
                    <fullName>hello</fullName>
                    <isActive>false</isActive>
                    <label>hello</label>
                </value>
                <value>
                    <fullName>yfgfgfc</fullName>
                    <isActive>false</isActive>
                    <label>yfgfgfc</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractStart__c</fullName>
        <description>If Master contract exists - then formula to pull the date from Contract reference</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Quote Start Date</inlineHelpText>
        <label>Contract Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Annual</fullName>
                    <isActive>false</isActive>
                    <label>Annual</label>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>FPD</fullName>
                </value>
                <value>
                    <fullName>FPD Ex-Space</fullName>
                    <isActive>false</isActive>
                    <label>FPD Ex-Space</label>
                </value>
                <value>
                    <fullName>Priced</fullName>
                </value>
                <value>
                    <fullName>Priced Ex-Space</fullName>
                    <isActive>false</isActive>
                    <label>Priced Ex-Space</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>